# CMakeExampleCUDA

./: CMakeLists.txt  README.md  cmk.sh
header/: a.hpp  thrust_sort.h
src/: CMakeLists.txt  device.cpp  device.cu  thrust_sort.cu
src/a/: a.cpp  a.cu  a_common.hpp
src/thrust/: thrust_sort.cpp
test/: CMakeLists.txt  host.cpp  thrust_sort_test.cpp
test/a/: test.cpp
